<resources>
    <string name="email">timingtrials@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="add_course">Add Course</string>
    <string name="add_rider">Add Rider</string>
    <string name="add_result">Add Result</string>
    <string name="app_name">Timing Trials</string>
    <string name="average_speed">Average Speed</string>
    <string name="begin_tt">Begin TT!</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="cati">CATI</string>
    <string name="choose_sort">Available rider sorting</string>
    <string name="clear_notes">Clear note column</string>
    <string name="click_again_to_clear">Click again to clear filter</string>
    <string name="club">Club</string>
    <string name="column_filter">Filter</string>
    <string name="about_timing_trials">About Timing Trials</string>
    <string name="demo_data">Demo data</string>
    <string name="demo_data_description">Import demo data to explore the features of the app.</string>
    <string name="demo_data_description_ques"><![CDATA[<html><div><p>Import demo data to explore features of the app?<br /><br />You can delete this later in settings.<br /><br />Data from <a href="https://royaldeanforestcc.wixsite.com/website/">Royal Dean Forest Cycling Club</a></p></div></html>]]></string>
    <string name="demo_data_delete_later">You can delete this later in settings.</string>
    <string name="column">Column</string>
    <string name="columns">Columns</string>
    <string name="help_about">Help/About</string>
    <string name="contact_developer">Contact developer</string>
    <string name="feedback_suggestions_welcome">Feedback and suggestions welcome!</string>
    <string name="documentation">Documentation</string>
    <string name="confirm_delete_course_message">Are you sure? ALL results associated with this course will be lost!</string>
    <string name="confirm_delete_rider_message">Are you sure? ALL results associated with this rider will be lost!</string>
    <string name="confirm_delete_result_message">Are you sure? This cannot be undone!</string>
    <string name="confirm_delete_setup_timetrial_message">Are you sure? This cannot be undone!</string>
    <string name="confirm_delete_database_message">Are you sure?  This cannot be undone! It is recommended to export a backup first.</string>
    <string name="confirm_delete_timetrial_message">Are you sure? ALL results associated with this time trial will be deleted, this cannot be undone!</string>
    <string name="confirm_delete_timetrial_results_message">Are you sure? Time trial will be deleted, This cannot be undone!</string>
    <string name="course_length">Course Length</string>
    <string name="course_name">Course Name</string>
    <string name="course_requires_name">Course requires a name</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="ctt_name">CTT Code</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="current_category">Current Category</string>
    <string name="remove_from_tt">Remove from TT</string>
    <string name="current_club">Current Club</string>
    <string name="date">Date</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_results">Delete All</string>
    <string name="export_dot">Export…</string>
    <string name="delete_result">Delete Result</string>
    <string name="delete_rider">Delete Rider</string>
    <string name="delete_timetrial">Delete time trial</string>
    <string name="auto">Auto</string>
    <string name="manually_assign">Manually Assign</string>
    <string name="delete">Delete</string>
    <string name="distance_units">Distance Units</string>
    <string name="distance">Distance</string>
    <string name="dob">DoB</string>
    <string name="choose_export_type">Choose export file type</string>
    <string name="tt_file">.TT (for backup )</string>
    <string name="csv_file">.CSV (for spreadsheet)</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_description">Edit Description</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="edit_numbering">Edit numbering</string>
    <string name="set_number">Set Number</string>
    <string name="seed_riders">Seed Riders</string>
    <string name="seed_riders_message">Seed riders based on past results, fastest off last?</string>
    <string name="what_number_will_late_rider_use">What number will the late rider use?</string>
    <string name="number_already_taken_swap">Number already taken!\nThe numbers will be swapped</string>
    <string name="number_already_taken">Number already taken!</string>
    <string name="edit_rider">Edit Rider</string>
    <string name="edit_result">Edit Result</string>
    <string name="explore_results">Explore Results</string>
    <string name="export_csv">Export CSV</string>
    <string name="tips">Tips</string>
    <string name="export_data">Export Data</string>
    <string name="export_json">Export .tt</string>
    <string name="first_name">First Name</string>
    <string name="first_number">First Number:</string>
    <string name="gender">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_data">Import Data</string>
    <string name="insert_results">Insert to DB</string>
    <string name="laps">Laps</string>
    <string name="last_name">Last Name</string>
    <string name="manage_riders">View Database</string>
    <string name="missed_start_move_to_back">Missed start, move to back</string>
    <string name="name">Name</string>
    <string name="new_course">New Course</string>
    <string name="setup_new_timetrial">Setup new TT</string>
    <string name="new_rider">New Rider</string>
    <string name="version">Version</string>
    <string name="no_results">No Results</string>
    <string name="now_choose_rider">Now press number</string>
    <string name="number_of_laps">Number of laps (splits)</string>
    <string name="number_of_rides">Rides</string>
    <string name="ok">OK</string>
    <string name="order_riders">Order</string>
    <string name="set_custom_start_time">Set custom start time</string>
    <string name="powered_by_timing_trials">Powered by Timing Trials</string>
    <string name="press_assign_rider">Press to assign number</string>
    <string name="rest_filters">Reset Columns</string>
    <string name="results">Results</string>
    <string name="resume_setup">Resume setting up</string>
    <string name="resume">Resume</string>
    <string name="rider_dnf_did_not_finish">Rider DNF (Did not finish)</string>
    <string name="rider_dns_did_not_start">Rider DNS (did not start)</string>
    <string name="rider_missed_start_move_to_next_slot">Missed start, move to next start slot</string>
    <string name="rider_passed">Rider Passed!</string>
    <string name="rider_start_offset">First rider start offset</string>
    <string name="rider">Rider</string>
    <string name="riders">Riders</string>
    <string name="screenshot">Screenshot</string>
    <string name="search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_course">Select a course</string>
    <string name="select_file">Select File....</string>
    <string name="select_riders">Riders</string>
    <string name="selected_course">Selected Course</string>
    <string name="senior">Senior</string>
    <string name="time_00000">h:mm:ss.S</string>
    <string name="settings">Settings</string>
    <string name="setup_tab_text_1">Setup Time trial</string>
    <string name="setup_tab_text_2">Add Riders</string>
    <string name="setup_tab_text_3">Order Riders</string>
    <string name="setup_tab_text_4">Select Time</string>
    <string name="setup_timetrial">Setup</string>
    <string name="show_column">Show</string>
    <string name="sort">Sort available riders</string>
    <string name="start_in_string">Start in: %1$d minutes</string>
    <string name="start_new_timetrial">Start New Time trial</string>
    <string name="new_timetrial">New Time trial!</string>
    <string name="rider_must_have_first_name_set">Rider must have first name set</string>
    <string name="error_rider_exists_with_name">A rider already exists with that name!</string>
    <string name="error_course_exists_with_name">A course already exists with that name!</string>
    <string name="start_new">Start New</string>
    <string name="start_time">First rider to start at</string>
    <string name="start_tt">Start TT</string>
    <string name="time_trials">TT\'s</string>
    <string name="time">Time</string>
    <string name="time_and_format">Time (hh:mm:ss.S)</string>
    <string name="time_format">hh:mm:ss.S</string>
    <string name="timetrial_interval">Start interval (seconds)</string>
    <string name="timetrial_name">Timetrial Name</string>
    <string name="timetrial_status">Status</string>
    <string name="timetrial_to_start_at">Time trial to start at</string>
    <string name="timing_trials">Timing Trials</string>
    <string name="timingtrials_database">Timing Trials Database</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="title_activity_global_result">GlobalResultActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_timing">TimingActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="tt_has_started_cannot_go_back">TT has now started, cannot go back to setup!</string>
    <string name="undo_dnf">Undo DNF?</string>
    <string name="undo_dns_description">Undo and set rider to active?</string>
    <string name="undo_dns">Undo DNS?</string>
    <string name="undo">Undo</string>
    <string name="units_setting_description">Choose default units for distances</string>
    <string name="view_results">View Results</string>
    <string name="yob">Year of birth</string>
    <string name="exclusions">Exclusions</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="tt_needs_one_rider">TT Needs at least 1 rider</string>
    <string name="tt_must_start_in_the_future">TT must start in the future, select start time</string>
    <string name="end_timing">End Timing</string>
    <string name="notes">Notes</string>
    <string name="add_result_row">Add Result Row</string>
    <string name="show_help">Help/About</string>
    <string name="add_late_rider">Add late rider</string>
    <string name="debug">Debug</string>
    <string name="about_blurb_1">Hi I\'m Jared, the developer of this app. I was motivated to create this after volunteering to time a time trial for my local club and being horrified when handed a notepad, pen and stopwatch while I had a smartphone in my pocket.</string>
    <string name="about_blurb_2">I have also found it frustrating going to club events and having to days for the results to come out. I hope this app helps clubs produce results quicker and more accurately.</string>
    <string name="about_blurb_3">This app has been developed in my spare time and I have no plans to monetize the current feature set. The only data collected is that you see stored on your device. I may consider premium features such as cloud syncing of results, depending on demand.</string>
    <string name="about_blurb_4"><![CDATA[<p>Best way to support is <a href="mailto:timingtrials@gmail.com">provide feedback</a>, rate (5 star 😊) on google play and spread the word!</p>]]></string>
    <string name="about_blurb_5">May the temporary traffic lights forever be in your favour\nJared</string>
</resources>