<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/resultScreenshot"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/screenshot"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/resultMenuEditDescription"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit_description"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/resultMenuExport"
        android:title="@string/export_dot"
        app:showAsAction="never" />

    <item
        android:id="@+id/resultMenuAddRow"
        android:title="@string/add_result_row"
        app:showAsAction="never" />


    <item
        android:id="@+id/resultMenuClearNotes"
        android:title="@string/clear_notes"
        app:showAsAction="never" />


    <item
        android:id="@+id/resultMenuTips"
        android:title="@string/tips"
        app:showAsAction="never" />

    <item
        android:id="@+id/resultMenuDelete"
        android:title="@string/delete"
        app:showAsAction="never" />



</menu>



