<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/navGroup1" >

        <item
            android:id="@+id/app_bar_new_timetrial"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/new_timetrial" />

        <item
            android:id="@+id/app_bar_spreadsheet"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/explore_results" />

    </group>


    <group android:id="@+id/navGroup2">
        <item
            android:id="@+id/app_bar_import"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/import_data" />
        <item
            android:id="@+id/app_bar_export"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/export_data" />
    </group>



    <group android:id="@+id/navGroup3">
        <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/app_bar_onboard"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/show_help" />

        <item
            android:id="@+id/app_bar_test"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/debug"
            android:visible="false"/>
    </group>


</menu>
