<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
>
    <item
        android:id="@+id/settings_app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/settings_menu_sort"
        android:icon="@drawable/ic_find_replace_black_24dp"
        app:showAsAction="never"
        android:title="@string/sort" />

    <item
        android:id="@+id/settings_menu_number_options"
        android:icon="@drawable/ic_find_replace_black_24dp"
        app:showAsAction="never"
        android:title="@string/edit_numbering" />

    <item
        android:id="@+id/settings_menu_seed_riders"
        app:showAsAction="never"
        android:title="@string/seed_riders" />

</menu>
