<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/timingMenuAddLateRider"
        android:title="@string/add_late_rider"
        app:showAsAction="never" />

    <item
        android:id="@+id/timingMenuTips"
        android:title="@string/tips"
        app:showAsAction="never" />

    <item
        android:id="@+id/timingMenuSettings"
        android:title="@string/settings"
        app:showAsAction="never" />

        <item
            android:id="@+id/timingTest"
            android:title="Test"
            android:visible="false"
            app:showAsAction="never" />

    <item
        android:id="@+id/timingTest2"
        android:title="Test 2"
        android:visible="false"
        app:showAsAction="never" />

</menu>